--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon index.js"
   },
-  "author": "Bolonin Timofey",
+  "author": "",
   "license": "GPL-3.0",
   "dependencies": {
     "dotenv": "^16.3.1",
